--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="slides.css">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
-    <title>Document</title>
+    <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
     <header>
-        <h1>CSCI</h1>
+        <h1>CSCI Prototype</h1>
 
 
         <nav>
@@ -38,6 +38,8 @@
             </ul>
         </nav>
     </header>
+
+    
     <main>
         <div class="slides-container"></div>
     </main>
