--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="slides.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/slides.css">
+    <link rel="stylesheet" href="css/areas.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="main.js" defer></script>
     <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
     <header>
-        <h1>CSCI Prototype</h1>
+        <div class="logo">
+            <h1>Computer Science</h1>
+            <h2>at UNCA Asheville</h2>
+        </div>
 
 
         <nav>
