--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <!-- dynamic content goes here -->
     <main>
         <div class="slides-container"></div>
+        <section class="" id="lightbox">
+            <button class="close" onclick="hideLightbox()">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="content"></div>
+        </section>
     </main>
 
     <footer>
