--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    
     <link rel="stylesheet" href="css/slides.css">
     <link rel="stylesheet" href="css/areas.css">
     <link rel="stylesheet" href="css/area-detail.css">
+    <link rel="stylesheet" href="css/curriculum.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="main.js" defer></script>
     <title>UNCA CSCI Website Prototype</title>
