added course search

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/areas.css">
     <link rel="stylesheet" href="css/area-detail.css">
     <link rel="stylesheet" href="css/curriculum.css">
+    <link rel="stylesheet" href="css/courses.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="main.js" defer></script>
+    <script src="js/main.js" defer></script>
     <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         </div>
 
 
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li>
                     <a href="#main">Home</a>
