--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/courses.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
+
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
