animation has been improved

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="logo">
             <h1>Computer Science</h1>
             <h2>at UNCA Asheville</h2>
