--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="#areas">Areas</a>
                 </li>
                 <li>
-                    <a href="#curriculum">Curriculum</a>
+                    <a href="#curriculum">Requirements</a>
                 </li>
                 <li>
                     <a href="#people">People</a>
