--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="main-header">
         <div class="logo">
             <h1>Computer Science</h1>
-            <h2>at UNCA Asheville</h2>
+            <h2>at UNC Asheville</h2>
         </div>
 
 
@@ -35,16 +35,13 @@
                     <a href="#news">News</a>
                 </li>
                 <li>
-                    <a href="#areas">Areas</a>
-                </li>
-                <li>
-                    <a href="#curriculum">Requirements</a>
-                </li>
-                <li>
                     <a href="#people">People</a>
                 </li>
                 <li>
-                    <a href="#for-students">For Students</a>
+                    <a href="#curriculum">Degree Requirements</a>
+                </li>
+                <li>
+                    <a href="#areas">Areas</a>
                 </li>
             </ul>
             </ul>
