--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
                     <a href="#people">People</a>
                 </li>
                 <li>
-                    <a href="#curriculum">Degree Requirements</a>
+                    <a href="#areas">CS Areas</a>
                 </li>
                 <li>
-                    <a href="#areas">Areas</a>
+                    <a href="#curriculum">Requirements</a>
+                </li>
+                <li>
+                    <a href="#courses">Courses</a>
                 </li>
             </ul>
             </ul>
