--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/areas.css">
     <link rel="stylesheet" href="css/area-detail.css">
     <link rel="stylesheet" href="css/curriculum.css">
+    <link rel="stylesheet" href="css/people.css">
     <link rel="stylesheet" href="css/course-schedule.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
