--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     
+    <link rel="stylesheet" href="css/banner-nav.css">
     <link rel="stylesheet" href="css/slides.css">
     <link rel="stylesheet" href="css/areas.css">
     <link rel="stylesheet" href="css/area-detail.css">
@@ -16,7 +17,9 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
 
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <!-- <link rel="icon" href="images/favicon.png" type="image/x-icon"> -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <title>UNCA CSCI Website Prototype</title>
 </head>
 <body>
