CSS Edits; Template Rename

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/banner-nav.css">
     <link rel="stylesheet" href="css/slides.css">
     <link rel="stylesheet" href="css/areas.css">
@@ -14,8 +15,9 @@
     <link rel="stylesheet" href="css/curriculum.css">
     <link rel="stylesheet" href="css/people.css">
     <link rel="stylesheet" href="css/course-schedule.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
     <script src="js/main.js" defer></script>
+    <script src="js/show-swatches.js" defer></script>
 
     <!-- <link rel="icon" href="images/favicon.png" type="image/x-icon"> -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -30,17 +32,12 @@
     <header class="main-header">
         <div class="logo">
             <h1>Computer Science</h1>
-            <!-- <h1>C</h1>
-            <h1>S</h1>
-            <h1>C</h1>
-            <h1>I</h1> -->
         </div>
-
 
         <nav class="main-nav">
             <ul>
                 <li>
-                    <a href="#main">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
                     <a href="#news">News</a>
