--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     
     <link rel="stylesheet" href="css/banner-nav.css">
@@ -52,9 +51,8 @@
                     <a href="#curriculum">Requirements</a>
                 </li>
                 <li>
-                    <a href="#courses">Courses</a>
+                    <a href="#course-schedule">Courses</a>
                 </li>
-            </ul>
             </ul>
         </nav>
         <a id="burger" class="mobile" href="#" onclick="toggleMenu(event)">
