--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
                     <a href="#areas">CS Areas</a>
                 </li>
                 <li>
-                    <a href="#curriculum">Requirements</a>
-                </li>
-                <li>
-                    <a href="#course-schedule">Courses</a>
+                    <a href="#curriculum">Our Programs</a>
                 </li>
             </ul>
         </nav>
